--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "chat.tools.terminal.autoApprove": {
         "ForEach-Object": true,
-        "Test-Path": true
+        "Test-Path": true,
+        "cargo check": true
     }
 }
