--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "chat.tools.terminal.autoApprove": {
         "ForEach-Object": true,
         "Test-Path": true,
-        "cargo check": true
+        "cargo check": true,
+        "cargo test": true
     }
 }
