--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ cfg-if = "1.0.4"
 crossbeam-channel = "0.5"
 dpi = "0.1"
 euclid = "0.22"
+inventory = "0.3"
 hitrace = { version = "0.1.6", features = ["api-19", "tracing-rs"], optional = true }
 image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
 keyboard-types = { version = "0.8.3", features = ["serde", "webdriver"] }
@@ -82,8 +83,11 @@ raw-window-handle = "0.6"
 rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws-lc-rs"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
 serde = { version = "1.0.228", features = ["derive"] }
-tokio = "1"
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
+tokio-util = "0.7"
 toml = "0.8"
+tower = "0.5"
+http = "1.3"
 tracing = { version = "0.1.44", optional = true }
 tracing-perfetto = { version = "0.1.5", optional = true }
 tracing-subscriber = { version = "0.3.22", optional = true, features = ["env-filter"] }
@@ -178,3 +182,4 @@ rstest = "0.26"
 tempfile = "3"
 tracing = "0.1.44"
 tracing-test = "0.2"
+inventory = "0.3"
