feat(verse): implement Step 5.1 - iroh scaffold & identity bootstrap
- Add Verse native mod with ModManifest (provides identity:p2p, protocol:verse, 4 actions)
- Compile-time registration via inventory::submit! macro
- P2P identity bootstrap: Ed25519 keypair generation + OS keychain persistence
- iroh Endpoint creation with ALPN b'graphshell-sync/1' + NAT traversal
- Diagnostics emission: registry.mod.load_succeeded, verse.sync.identity_generated
- Dependencies: iroh 0.30, qrcode 0.14, base64 0.22, hostname 0.4
- Integration: verse::init() called in desktop/cli.rs main() with error fallback
- Tests: 4 unit tests for manifest + serde round-trip validation
- Graceful degradation: app functions without Verse mod if init fails

Resolves Phase 5 Step 5.1 done gate (partial - IdentityRegistry trait extension deferred to 5.2)

Files:
- Created: mods/native/verse/{mod.rs, tests.rs}
- Created: mods/{mod.rs, native/mod.rs}
- Modified: lib.rs, desktop/cli.rs, Cargo.toml
- Docs: PHASE5_STEP5.1_COMPLETE.md

~340 lines of code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,6 +145,10 @@ rkyv = { version = "0.8", features = ["std"] }
 aes-gcm = "0.10.3"
 keyring = "3"
 zstd = "0.13"
+iroh = "0.30"
+qrcode = "0.14"
+base64 = "0.22"
+hostname = "0.4"
 gilrs = "0.11.1"
 glow = "0.16.0"
 headers = "0.4"
