feat(verse): implement Step 5.2 - TrustedPeer store and IdentityRegistry extension
Core Functionality:

- Trust Store: TrustedPeer model with PeerRole, AccessLevel, workspace grants

- Persistence: JSON to ~/.config/graphshell/verse_trusted_peers.json

- P2PIdentityExt trait: 6 methods for P2P operations

- Cryptography: Ed25519 sign/verify using iroh + ed25519-dalek 2.2

- SyncLog: CRDT with VersionVector, AES-256-GCM encryption

- Diagnostics: 3 new channels (p2p_key_loaded, pairing_succeeded/failed)

Implementation: +420 lines across 4 files

Testing: 11/11 tests pass (7 new for Step 5.2)

Done Gates: P2P persona, sign/verify, trust store, grant serialization - all validated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,6 +143,8 @@ fjall = "3"
 redb = "3"
 rkyv = { version = "0.8", features = ["std"] }
 aes-gcm = "0.10.3"
+ed25519-dalek = { version = "2.2", features = ["serde"] }
+sha2 = "0.10"
 keyring = "3"
 zstd = "0.13"
 iroh = "0.30"
