--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,6 +151,7 @@ iroh = "0.30"
 qrcode = "0.14"
 base64 = "0.22"
 hostname = "0.4"
+mdns-sd = "0.12"
 gilrs = "0.11.1"
 glow = "0.16.0"
 headers = "0.4"
