--- a/resources/org.graphshell.Graphshell.desktop
+++ b/resources/org.graphshell.Graphshell.desktop
@@ -4,7 +4,7 @@
 #   1. Create the applications folder if it doesn't exist:
 #           mkdir -p ~/.local/share/applications/
 #   2. Copy this file:
-#           cp org.servo.Servo.desktop ~/.local/share/applications
+#           cp org.graphshell.Graphshell.desktop ~/.local/share/applications
 #   3. Edit the copied file and replace the two GRAPHSHELL_SRC_PATH occurrences
 #      with the path to the Graphshell sources.
 #   4. Create the icons folder if it doesn't exist:
